/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.common.auth;

import "api/common/r.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.center.auth";
option java_outer_classname = "TokenProto";
option objc_class_prefix = "Auth";
option java_multiple_files = true;

/*
Api
服务接口，定义了令牌（Token）相关的RPC调用
*/
service TokenApi {
  // 校验令牌有效性
  rpc CheckValid (GrpcLoginQuery) returns (GrpcRTokenDTO);
}

// checkValid Query
// 校验登录信息的请求结构体
message GrpcLoginQuery {
  string tenant = 1; // 租户，标识所属租户
  string name = 2; // 登录名称
  string salt = 3; // 盐值，用于密码加密
  string password = 4; // 登录密码
  string token = 5; // 令牌
}

// R of Token DTO
// 返回令牌校验结果的响应结构体
message GrpcRTokenDTO {
  /*
  R
  通用返回结果，包含状态码、消息等
  */
  GrpcR result = 1;

  /*
  Data
  返回的数据，通常为令牌或过期时间等
  */
  string data = 2;
}
